tests/correctness/resources/miniboxing/tests/compile/gh-bug-185-funcs+2-no-plugin.check
newSource1.scala:2: error: use the miniboxing plugin!
  Test.identityFun(3)
       ^