tests/correctness/resources/miniboxing/tests/compile/gh-bug-185-funcs+2-no-plugin.scala
object Test2 {
  Test.identityFun(3)
}
